--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -37,6 +37,9 @@
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
+            <% if current_user.id == agenda.user.id || current_user.id == agenda.team.owner_id %>
+              <%= link_to I18n.t('views.button.delete'), agenda_url(agenda.id), method: :delete, class: 'btn btn-sm btn-danger' %>
+              <% end %>
             <ul class="nav nav-treeview" style="display: block;">
               <% agenda.articles.each do |article| %>
                 <li class="nav-item">
